# timer

./: .ignore  Cargo.toml  LICENSE-MIT  rustfmt.toml
.github/workflows/: release.yml
assets/icons/: icon.icns
crates/icon/: Cargo.toml
crates/icon/src/: lib.rs
src/: app.rs  icon.rs  main.rs  subscription.rs  util.rs
src/app/: config.md  config.rs  info.rs  notification.rs  timer.rs  update.rs  view.rs
src/app/timer/: ticker.rs
src/app/timer/ticker/: normal.rs  pomodoro.rs
src/app/update/: windows.rs
src/app/view/: config.rs  main.rs  root.rs
src/view/: mod.rs
