[package]
name = "timer"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
configu = "0.3.0"
iced = { version = "0.13.1", features = ["tokio"] }
icon = { version = "0.1.0", path = "crates/icon" }
image.workspace = true
notify-rust = "4.11.4"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["sync"] }
tray-icon = "0.19.2"
windows = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }

[target.'cfg(windows)'.dependencies]
windows = "0.59.0"
windows-registry = "0.4.0"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
image = "0.25.5"
